--- a/project/views/admin/category/category-list.hbs
+++ b/project/views/admin/category/category-list.hbs
@@ -1,1 +1,54 @@
-<h1>category-list</h1>
+<table class="table table-striped table-hover text-center align-middle">
+    <thead class="table-dark">
+    <tr>
+        <th scope="col">STT</th>
+        <th scope="col">Tên thể loại</th>
+        <th scope="col">Mô tả</th>
+        <th scope="col">Số lượng Anime</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">1</th>
+        <td>Hành động (Action)</td>
+        <td>Những trận chiến mãn nhãn, anh hùng và sức mạnh phi thường.</td>
+        <td>12</td>
+    </tr>
+    <tr>
+        <th scope="row">2</th>
+        <td>Tình cảm (Romance)</td>
+        <td>Câu chuyện tình yêu nhẹ nhàng, cảm động và lãng mạn.</td>
+        <td>9</td>
+    </tr>
+    <tr>
+        <th scope="row">3</th>
+        <td>Phiêu lưu (Adventure)</td>
+        <td>Khám phá thế giới, hành trình đầy thử thách và kỳ bí.</td>
+        <td>8</td>
+    </tr>
+    <tr>
+        <th scope="row">4</th>
+        <td>Kỳ ảo (Fantasy)</td>
+        <td>Thế giới phép thuật, quái vật và các sinh vật huyền thoại.</td>
+        <td>10</td>
+    </tr>
+    <tr>
+        <th scope="row">5</th>
+        <td>Kinh dị (Horror)</td>
+        <td>Những câu chuyện rùng rợn, ma quỷ và tâm lý đáng sợ.</td>
+        <td>5</td>
+    </tr>
+    <tr>
+        <th scope="row">6</th>
+        <td>Học đường (School)</td>
+        <td>Bối cảnh trong trường học, xoay quanh tình bạn và tuổi trẻ.</td>
+        <td>11</td>
+    </tr>
+    <tr>
+        <th scope="row">7</th>
+        <td>Hài hước (Comedy)</td>
+        <td>Những tình huống vui nhộn, nhân vật dí dỏm và dễ thương.</td>
+        <td>7</td>
+    </tr>
+    </tbody>
+</table>
